--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -876,6 +876,19 @@ DashboardScreen As screen:
                         NewForm(EstimateForm);ResetForm(EstimateForm);
                         NewForm(ScopeInfoForm);ResetForm(ScopeInfoForm);
                         NewForm(UnitInfoForm);ResetForm(UnitInfoForm);
+                        Set(VarUnitcountSummary,Blank());
+                        Set(VarUnitDescriptionSummary,Blank());
+                        Set(VarScopeSummary,Blank());
+                        Set(VarScopeofworkSummary,Blank());
+                        Set(VarCustomWorkSummary,Blank());
+                        Set(VarEstimateHoursSummary,Blank());
+                        Set(VarNotesSummary,Blank());
+                        Set(VarUnitDownSummary,Blank());
+                        Set(VarAdditionExpenseSummary,Blank());
+                        Set(VarTravelSummary,Blank());
+                        Set(VarCommunicationSummary,Blank());
+                        Set(VarCustomerNameSummary,Blank());
+                        Set(VarformattedNumberSummary,Blank());
                         Clear(LeadImagesCollection);
                         Set(VarcontractRecord,Blank());
                         Set(VarformattedNumber,Blank());
