--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -1468,7 +1468,7 @@ LeadSummaryScreen As screen:
                             HoverFill: =RGBA(255, 255, 255, 1)
                             MaxLength: =10
                             OnChange: |-
-                                =If(Len(IntxtContactNumberES_1.Text)=10, Set(VarformattedNumber, Text(Value(IntxtContactNumberES_1.Text), "[$-en-US](###) ###-####"));Set(varContactNumber, true), If(!IsBlank(IntxtContactNumberES_1.Text) && Len(IntxtContactNumberES_1.Text)<>10, Set(Varerrormessage, true); Set(varContactNumber, false)));
+                                =If(Len(IntxtContactNumberES_1.Text)=10, Set(VarformattedNumberSummary, Text(Value(IntxtContactNumberES_1.Text), "[$-en-US](###) ###-####"));Set(varContactNumber, true), If(!IsBlank(IntxtContactNumberES_1.Text) && Len(IntxtContactNumberES_1.Text)<>10, Set(Varerrormessage, true); Set(varContactNumber, false)));
                             OnSelect: =If(varContactNumber=true,Set(varContactNumber,true));
                             PaddingLeft: =5
                             RadiusBottomLeft: =0
@@ -1650,6 +1650,7 @@ LeadSummaryScreen As screen:
                         }));
                         Set(VarNotificationloding,false);
                         Set(VarNotificationSuccess,true);
+                        
                         /*Notify(
                             "Form has been submitted succuessfully.",
                             NotificationType.Success
