--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -596,7 +596,7 @@ DashboardScreen As screen:
                     Width: =Parent.Width/2.2
                     ZIndex: =1
 
-                    grpQuotedLeadsDS_2 As group:
+                    grpQuotedLeadsDS As group:
                         Height: =5
                         Width: =5
                         X: =40
