--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -603,7 +603,7 @@ DashboardScreen As screen:
                         Y: =-0.48951781970654906
                         ZIndex: =5
 
-                        lblInprogressLeadsDS_8 As label:
+                        lblInprogressIncentivesDS As label:
                             Align: =Align.Center
                             AutoHeight: =true
                             DisplayMode: =DisplayMode.View
@@ -633,10 +633,10 @@ DashboardScreen As screen:
                                 )) 
                             Width: =Parent.Width
                             X: =
-                            Y: =lblQuotedLeadsDS_2.Height+lblQuotedLeadsDS_2.Y
+                            Y: =lblQuotedLeadsDS.Height+lblQuotedLeadsDS.Y
                             ZIndex: =1
 
-                        lblQuotedLeadsDS_2 As label:
+                        lblQuotedLeadsDS As label:
                             Align: =Align.Center
                             AutoHeight: =true
                             DisplayMode: =DisplayMode.View
@@ -656,10 +656,10 @@ DashboardScreen As screen:
                                         Sum(Filter(GCTotalIncentives,TechnicianID=VarTechnicianID.'Personnel No'),TotalProposedLead))
                             Width: =Parent.Width
                             X: =
-                            Y: =lblQuotedDS_2.Height+lblQuotedDS_2.Y
+                            Y: =lblQuotedDS.Height+lblQuotedDS.Y
                             ZIndex: =2
 
-                        lblQuotedDS_2 As label:
+                        lblQuotedDS As label:
                             Align: =Align.Center
                             AutoHeight: =true
                             DisplayMode: =DisplayMode.View
@@ -676,7 +676,7 @@ DashboardScreen As screen:
                             Y: =Parent.Height/10
                             ZIndex: =3
 
-                        btnQuotedLeadsDS_2 As button:
+                        btnQuotedLeadsDS As button:
                             Color: =RGBA(0, 0, 0, 0)
                             DisabledBorderColor: =RGBA(116, 116, 116, 1)
                             DisabledFill: =RGBA(0, 0, 0, 0)
