--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -721,7 +721,7 @@ DashboardScreen As screen:
                     Width: =Parent.Width/2.2
                     ZIndex: =2
 
-                    grpQuotedLeadsDS_3 As group:
+                    grpSoldLeadsDS As group:
                         Height: =5
                         Width: =5
                         X: =40
