--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -920,7 +920,7 @@ DashboardScreen As screen:
                 Width: =Parent.Width
                 ZIndex: =5
 
-                Image3 As image:
+                imgLogoDS As image:
                     DisplayMode: =DisplayMode.View
                     Fill: =RGBA(255, 255, 255, 1)
                     Height: =Parent.Height
