--- a/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
@@ -1088,7 +1088,7 @@ CreatLeadScreen As screen:
         Width: =Parent.Width
         ZIndex: =6
 
-        Rectangle1_3 As rectangle:
+        borderLoaderPopuoCS As rectangle:
             Fill: =RGBA(255, 255, 255, 1)
             Height: =If(Parent.Height<500,Parent.Height/1.5,Parent.Height/3)
             Width: =If(Parent.Width<1000,Parent.Width/1.2,Parent.Width/2)
@@ -1096,17 +1096,18 @@ CreatLeadScreen As screen:
             Y: =(Parent.Height-Self.Height)/2
             ZIndex: =1
 
-        Container6_3 As groupContainer.verticalAutoLayoutContainer:
+        ctnLoaderCS As groupContainer.verticalAutoLayoutContainer:
             BorderThickness: =1
-            Height: =Rectangle1_3.Height
+            Height: =borderLoaderPopuoCS.Height
             LayoutDirection: =LayoutDirection.Vertical
             LayoutMode: =LayoutMode.Auto
-            Width: =Rectangle1_3.Width
-            X: =Rectangle1_3.X
-            Y: =Rectangle1_3.Y
+            Width: =borderLoaderPopuoCS.Width
+            X: =borderLoaderPopuoCS.X
+            Y: =borderLoaderPopuoCS.Y
             ZIndex: =2
 
-            Container9_3 As groupContainer.verticalAutoLayoutContainer:
+            ctnLoaderPopupCS As groupContainer.verticalAutoLayoutContainer:
+                AlignInContainer: =AlignInContainer.SetByContainer
                 DropShadow: =DropShadow.None
                 FillPortions: =0
                 Height: =Parent.Height/3
@@ -1117,8 +1118,7 @@ CreatLeadScreen As screen:
                 Width: =Parent.Width
                 ZIndex: =1
 
-                Image4_3 As image:
-                    AlignInContainer: =AlignInContainer.Center
+                imgLoaderPopupCS As image:
                     Height: =Parent.Height
                     Image: |
                         =    'waiting-icon-gif-4'
@@ -1126,9 +1126,8 @@ CreatLeadScreen As screen:
                     Width: =Parent.Width
                     ZIndex: =1
 
-            Label3_3 As label:
+            lblLoaderPopupCS As label:
                 Align: =Align.Center
-                AlignInContainer: =AlignInContainer.Center
                 Font: =Font.Arial
                 FontWeight: =FontWeight.Semibold
                 Height: =100
@@ -1139,8 +1138,7 @@ CreatLeadScreen As screen:
                 Width: =Parent.Width
                 ZIndex: =2
 
-            Button4_3 As button:
-                AlignInContainer: =AlignInContainer.Center
+            btnOkPopupCS As button:
                 Fill: =RGBA(255, 0, 0, 1)
                 Font: =Font.Arial
                 HoverFill: =ColorFade(Self.Fill, -20%)
