--- a/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
@@ -918,7 +918,7 @@ CreatLeadScreen As screen:
         Width: =Parent.Width
         ZIndex: =4
 
-        Rectangle1_1 As rectangle:
+        borderContractErrorCS As rectangle:
             Fill: =RGBA(255, 255, 255, 1)
             Height: =If(Parent.Height<500,Parent.Height/1.5,Parent.Height/3)
             Width: =If(Parent.Width<1000,Parent.Width/1.2,Parent.Width/2)
@@ -926,17 +926,18 @@ CreatLeadScreen As screen:
             Y: =(Parent.Height-Self.Height)/2
             ZIndex: =1
 
-        Container6_1 As groupContainer.verticalAutoLayoutContainer:
+        ctnContractErrorCS As groupContainer.verticalAutoLayoutContainer:
             BorderThickness: =1
-            Height: =Rectangle1_1.Height
+            Height: =borderContractErrorCS.Height
             LayoutDirection: =LayoutDirection.Vertical
             LayoutMode: =LayoutMode.Auto
-            Width: =Rectangle1_1.Width
-            X: =Rectangle1_1.X
-            Y: =Rectangle1_1.Y
+            Width: =borderContractErrorCS.Width
+            X: =borderContractErrorCS.X
+            Y: =borderContractErrorCS.Y
             ZIndex: =2
 
-            Container9_1 As groupContainer.verticalAutoLayoutContainer:
+            ctnContractErrorImageCS As groupContainer.verticalAutoLayoutContainer:
+                AlignInContainer: =AlignInContainer.SetByContainer
                 DropShadow: =DropShadow.None
                 FillPortions: =0
                 Height: =Parent.Height/3
@@ -947,17 +948,15 @@ CreatLeadScreen As screen:
                 Width: =Parent.Width
                 ZIndex: =1
 
-                Image4_1 As image:
-                    AlignInContainer: =AlignInContainer.Center
+                imgErrorContractImageCS As image:
                     Height: =Parent.Height
                     Image: =error
                     PaddingTop: =40
                     Width: =Parent.Width
                     ZIndex: =1
 
-            Label3_1 As label:
+            lblMandatoryCS As label:
                 Align: =Align.Center
-                AlignInContainer: =AlignInContainer.Center
                 Font: =Font.Arial
                 FontWeight: =FontWeight.Semibold
                 Height: =100
@@ -966,8 +965,7 @@ CreatLeadScreen As screen:
                 Width: =Parent.Width
                 ZIndex: =2
 
-            Button4_1 As button:
-                AlignInContainer: =AlignInContainer.Center
+            btnOKPopupCS As button:
                 Fill: =RGBA(255, 0, 0, 1)
                 Font: =Font.Arial
                 HoverFill: =ColorFade(Self.Fill, -20%)
