--- a/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
@@ -911,6 +911,14 @@ CreatLeadScreen As screen:
                     Width: =Parent.Width
                     ZIndex: =1
 
+    ctnBackgroundMenuDS_1 As groupContainer.manualLayoutContainer:
+        Fill: =RGBA(0, 0.19, 0.19, 0.19)
+        Height: =Parent.Height-ctnHeaderDS.Height
+        Visible: =varshowMenu
+        Width: =Parent.Width
+        Y: =ctnHeaderDS.Y+ctnHeaderDS.Height
+        ZIndex: =2
+
     PopopContracterrorNextSS As groupContainer.manualLayoutContainer:
         Fill: =RGBA(0, 0, 0, 0.29)
         Height: =Parent.Height
@@ -976,37 +984,6 @@ CreatLeadScreen As screen:
                 Text: ="Ok"
                 Width: =Parent.Width/5
                 ZIndex: =3
-
-    Group2 As group:
-        Height: =5
-        Width: =5
-        X: =40
-        Y: =40
-        ZIndex: =4
-
-        ctnBackgroundMenuDS_1 As groupContainer.manualLayoutContainer:
-            Fill: =RGBA(0, 0.19, 0.19, 0.19)
-            Height: =Parent.Height-ctnHeaderDS.Height
-            Visible: =varshowMenu
-            Width: =Parent.Width
-            Y: =ctnHeaderDS.Y+ctnHeaderDS.Height
-            ZIndex: =2
-
-        "glryMenuBarCS As gallery.'BrowseLayout_Vertical_OneTextOneImageVariant_ver4.0'":
-            BorderColor: =RGBA(255, 255, 255, 1)
-            BorderThickness: =1
-            Fill: =RGBA(237, 237, 237, 1)
-            Height: =1.08*(CountRows(glryMenuBarCS.AllItems)*(glryMenuBarCS.TemplateHeight))
-            Items: =Menu
-            Layout: =Layout.Vertical
-            ShowScrollbar: =false
-            TemplatePadding: =0
-            TemplateSize: =90
-            Visible: =varshowMenu
-            Width: =Parent.Width/4
-            X: =10
-            Y: =ctnHeaderDS.Y+ctnHeaderDS.Height+5
-            ZIndex: =3
 
     PopopContracterrorCS As groupContainer.manualLayoutContainer:
         Fill: =RGBA(0, 0, 0, 0.29)
@@ -1147,4 +1124,89 @@ CreatLeadScreen As screen:
                 Visible: =false
                 Width: =Parent.Width/5
                 ZIndex: =3
+
+    grpMenuDS_9 As group:
+        Height: =5
+        Width: =5
+        X: =40
+        Y: =80
+        ZIndex: =9
+
+        ctnBackgroundMenuDS_10 As groupContainer.manualLayoutContainer:
+            Fill: =RGBA(0, 0.19, 0.19, 0.19)
+            Height: =Parent.Height-ctnHeaderDS.Height
+            Visible: =varshowMenu
+            Width: =Parent.Width
+            Y: =ctnHeaderDS.Y+ctnHeaderDS.Height
+            ZIndex: =7
+
+        "glryMenuBarDS_9 As gallery.'BrowseLayout_Vertical_OneTextOneImageVariant_ver4.0'":
+            BorderColor: =RGBA(255, 255, 255, 1)
+            BorderThickness: =1
+            Fill: =RGBA(237, 237, 237, 1)
+            Height: =1.08*(CountRows(glryMenuBarDS_9.AllItems)*(glryMenuBarDS_9.TemplateHeight))
+            Items: =Menu
+            Layout: =Layout.Vertical
+            ShowScrollbar: =false
+            TemplatePadding: =0
+            TemplateSize: =90
+            Visible: =varshowMenu
+            Width: =Parent.Width/4
+            X: =10
+            Y: =ctnHeaderDS.Y+ctnHeaderDS.Height
+            ZIndex: =8
+
+            ctnMenuDS_9 As groupContainer.manualLayoutContainer:
+                DropShadow: =DropShadow.ExtraBold
+                Fill: =RGBA(255, 255, 255, 1)
+                Height: =80
+                Width: =Parent.Width/1.02
+                ZIndex: =8
+
+                lblMenuDS_9 As label:
+                    AutoHeight: =true
+                    Color: =RGBA(255, 0, 0, 1)
+                    Height: =24
+                    PaddingBottom: =0
+                    PaddingLeft: =0
+                    PaddingRight: =0
+                    PaddingTop: =0
+                    Size: =If(Parent.Width<500,10,12)
+                    Text: =ThisItem.Title
+                    Width: =Parent.Width-iconMenuDS_9.Width-lineIndicatorDS_9.Width
+                    X: =45.83006535947712
+                    Y: =30
+                    ZIndex: =1
+
+                iconMenuDS_9 As icon.Add:
+                    Color: =RGBA(255, 0, 0, 1)
+                    Height: =Parent.Height/4.5
+                    Icon: =ThisItem.icon
+                    Width: =Parent.Width/4.5
+                    X: =12
+                    Y: =30
+                    ZIndex: =3
+
+                btnMensuDS_9 As button:
+                    Fill: =RGBA(0, 0, 0, 0)
+                    Height: =80
+                    HoverFill: =
+                    OnSelect: |+
+                        =Set(varshowMenu,!varshowMenu);Navigate(ThisItem.Navigate);
+                        
+                    PressedFill: =
+                    Size: =24
+                    Text: =""
+                    Width: =Parent.Width
+                    ZIndex: =4
+
+                lineIndicatorDS_9 As rectangle:
+                    BorderColor: =RGBA(255, 0, 0, 1)
+                    BorderThickness: =5
+                    Fill: =RGBA(255, 0, 0, 1)
+                    Height: =Parent.Height
+                    Visible: =If(ThisItem.Navigate=DashboardScreen,true,false)
+                    Width: =4
+                    X: =1
+                    ZIndex: =5
 
