--- a/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
@@ -902,7 +902,7 @@ CreatLeadScreen As screen:
                 Width: =Parent.Width
                 ZIndex: =4
 
-                Image3_1 As image:
+                imgLogoCL As image:
                     DisplayMode: =DisplayMode.View
                     Fill: =RGBA(255, 255, 255, 1)
                     Height: =Parent.Height
