--- a/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
@@ -653,7 +653,7 @@ UnitScreen As screen:
                     Width: =Parent.Width
                     ZIndex: =1
 
-    PopopContracterrorNextSS_1 As groupContainer.manualLayoutContainer:
+    PopopContracterrorNextUS As groupContainer.manualLayoutContainer:
         Fill: =RGBA(0, 0, 0, 0.29)
         Height: =Parent.Height
         Visible: =VarNotification
@@ -668,7 +668,7 @@ UnitScreen As screen:
             Y: =(Parent.Height-Self.Height)/2
             ZIndex: =1
 
-        Container6_4 As groupContainer.verticalAutoLayoutContainer:
+        ctnPopopContracterrorUS As groupContainer.verticalAutoLayoutContainer:
             BorderThickness: =1
             Height: =Rectangle1_4.Height
             LayoutDirection: =LayoutDirection.Vertical
@@ -679,6 +679,7 @@ UnitScreen As screen:
             ZIndex: =2
 
             Container9_4 As groupContainer.verticalAutoLayoutContainer:
+                AlignInContainer: =AlignInContainer.SetByContainer
                 DropShadow: =DropShadow.None
                 FillPortions: =0
                 Height: =Parent.Height/3
@@ -699,7 +700,6 @@ UnitScreen As screen:
 
             Label3_4 As label:
                 Align: =Align.Center
-                AlignInContainer: =AlignInContainer.Center
                 Font: =Font.Arial
                 FontWeight: =FontWeight.Semibold
                 Height: =100
@@ -709,7 +709,6 @@ UnitScreen As screen:
                 ZIndex: =2
 
             Button4_4 As button:
-                AlignInContainer: =AlignInContainer.Center
                 Fill: =RGBA(255, 0, 0, 1)
                 Font: =Font.Arial
                 HoverFill: =ColorFade(Self.Fill, -20%)
