--- a/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
@@ -721,7 +721,7 @@ UnitScreen As screen:
                 Width: =Parent.Width/5
                 ZIndex: =3
 
-    grpMenuDS_8 As group:
+    grpMenuUS As group:
         Height: =5
         Width: =5
         X: =40
