--- a/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
@@ -728,7 +728,7 @@ UnitScreen As screen:
         Y: =80
         ZIndex: =5
 
-        ctnBackgroundMenuDS_9 As groupContainer.manualLayoutContainer:
+        ctnBackgroundMenuUS As groupContainer.manualLayoutContainer:
             Fill: =RGBA(0, 0.19, 0.19, 0.19)
             Height: =Parent.Height-ctnHeaderDS.Height
             Visible: =varshowMenu
