--- a/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
@@ -209,7 +209,7 @@ UnitScreen As screen:
                     Width: |-
                         =//If(Parent.Width<440,40,Parent.Width<500,55,70)
                         If(Parent.Width<378,Parent.Width/8,Parent.Width<500,Parent.Width/8,Parent.Width/6)
-                    X: =Image1_6.X+Image1_6.Width
+                    X: =imgStep3US.X+imgStep3US.Width
                     Y: =If(Parent.Height>Parent.Width,(Parent.Height-Self.Height)/5.5,(Parent.Height-Self.Height)/3.2)
                     ZIndex: =10
 
@@ -265,7 +265,7 @@ UnitScreen As screen:
                     Size: =If(Parent.Width<378,11,Parent.Width<500,12,14)
                     Text: ="Step 3"
                     Width: =Parent.Width/5
-                    X: =Image1_6.X-Image1_6.Width/3
+                    X: =imgStep3US.X-imgStep3US.Width/3
                     Y: =Image1_7.Y+Image1_7.Height+20
                     ZIndex: =14
 
@@ -331,7 +331,7 @@ UnitScreen As screen:
                     Y: =(Parent.Height-Self.Height)/3.5
                     ZIndex: =21
 
-                Image1_6 As image:
+                imgStep3US As image:
                     BorderColor: =RGBA(202, 202, 202, 1)
                     BorderThickness: =1
                     DisabledBorderColor: =RGBA(202, 202, 202, 1)
